--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,12 @@ code {
 }
 
 .seatsCard{
-  height: 500px!important;
-  width: 500px!important;
+  /* height: 600px!important; */
+  width: 600px!important;
+}
+
+.btn-grp{
+display: flex;
+margin: 20px;
+justify-content: space-around;
 }
